# LLM-Powered-AI-QA-Suite

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  ruff.toml
.claude/: settings.json
.claude/commands/: fix-issue.md  lint.md  review.md  test.md
.claude/hooks/: guard-commit.sh
.claude/rules/: api-conventions.md  claude-sdk.md  code-style.md  generated-output.md  testing.md
AI-QA-SUITE/: DESIGN-PROCESS-AND-THEORY.md
ai-debug-accelerator/: README.md  ai_debug_report.md  cli.py  debugger.py  sample-report.json
ai-mock-architect/: README.md  cli.py  mock_architect.py  sample-swagger.json
ai-mock-architect/mocks/: README.md
ai-mock-architect/mocks/endpoints/POST_orders/: data.json
ai-mock-architect/mocks/endpoints/PUT_products_id/: data.json
ai-quality-dashboard/: app.py  repository.py
ai-quality-dashboard/static/css/: dashboard.css
ai-quality-dashboard/static/js/: dashboard.js
ai-quality-dashboard/tests/: test_api.py
ai-test-analyzer/: analyze_flaky.py  cli.py  log_parser.py  prompts.py  repository.py
ai-test-analyzer/tests/: test_analyzer.py  test_log_parser.py
ai-test-generator/: cli.py  generate_tests.py  prompts.py  repository.py  validator.py
ai-test-generator/tests/: test_generator.py  test_validator.py
ai-test-healer/: cli.py  healer.py  repository.py  selector_validator.py
ai-test-healer/tests/: test_healer.py  test_selector_validator.py
ai_debug_accelerator/: __init__.py  cli.py  debugger.py
ai_mock_architect/: __init__.py  cli.py  mock_architect.py
ai_mock_architect/mocks/endpoints/POST_users_register/: data.json
ai_quality_dashboard/: __init__.py  app.py  cli.py  repository.py
ai_quality_dashboard/static/: index.html
ai_quality_dashboard/tests/: test_api.py
ai_test_analyzer/: __init__.py  analyze_flaky.py  cli.py  repository.py
ai_test_analyzer/tests/: test_analyzer.py  test_log_parser.py
ai_test_generator/: __init__.py  cli.py  generate_tests.py  generated_login_tests.spec.ts  jira_ticket.py  prompts.py  repository.py  validator.py
ai_test_generator/tests/: test_generator.py  test_jira_ticket.py  test_runner.py  test_validator.py
ai_test_healer/: __init__.py  cli.py  healer.py  prompts.py  repository.py  selector_validator.py
ai_test_healer/tests/: test_healer.py  test_selector_validator.py
common/: __init__.py  claude_client.py  config.py  database.py  exceptions.py  logging_config.py  models.py  sanitizer.py  schemas.py  test_runner.py
orange-sk-bug-report/: BUG_REPORT.md
