[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-suite-common"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "SQLAlchemy>=2.0",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
    "python-json-logger>=2.0",
    "cssselect>=1.2",
    "click>=8.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
ai-test-generator = "ai_test_generator.cli:cli"
ai-test-analyzer = "ai_test_analyzer.cli:cli"
ai-test-healer = "ai_test_healer.cli:cli"
ai-quality-dashboard = "ai_quality_dashboard.cli:cli"
ai-debug-accelerator = "ai_debug_accelerator.cli:cli"
ai-mock-architect = "ai_mock_architect.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "ai_test_generator*", "ai_test_analyzer*", "ai_test_healer*", "ai_quality_dashboard*", "ai_debug_accelerator*", "ai_mock_architect*"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = [
    "ai_test_generator/tests",
    "ai_test_analyzer/tests",
    "ai_test_healer/tests",
    "ai_quality_dashboard/tests",
]
pythonpath = ["."]
